# iqtree2

./: .autotools  .cproject  .gitignore  .gitmodules  .project  .travis.yml  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Doxyfile  MPIHelper.cpp  MPIHelper.h  Makefile  Makefile.am  Makefile.in  ObjectStream.cpp  ObjectStream.h  README.md  TreeCollection.cpp  TreeCollection.h  Tung-Doxyfile  aclocal.m4  alignment.cpp  alignment.h  alignmentpairwise.cpp  alignmentpairwise.h  bionj.h  candidateset.cpp  candidateset.h  checkpoint.cpp  checkpoint.h  circularnetwork.cpp  circularnetwork.h  config.h  config.h.in  config.status  configure  configure.in  (+198 more)
alignment/: CMakeLists.txt  alignment.cpp  alignment.h  alignmentpairwise.cpp  alignmentpairwise.h  alignmentsummary.cpp  alignmentsummary.h  alisimulator.cpp  alisimulator.h  alisimulatorheterogeneity.cpp  alisimulatorheterogeneity.h  alisimulatorheterogeneityinvar.cpp  alisimulatorheterogeneityinvar.h  alisimulatorinvar.cpp  alisimulatorinvar.h  maalignment.cpp  maalignment.h  pattern.cpp  pattern.h  sequence.cpp  sequence.h  sequencechunk.cpp  sequencechunk.h  sequencechunkstr.cpp  sequencechunkstr.h  statespace.cpp  statespace.h  substitution.cpp  substitution.h  superalignment.cpp  superalignment.h  superalignmentpairwise.cpp  superalignmentpairwise.h  superalignmentpairwiseplen.cpp  superalignmentpairwiseplen.h  superalignmentunlinked.cpp  superalignmentunlinked.h
booster/: CMakeLists.txt  Makefile  bitset_index.c  bitset_index.h  booster.c  booster.h  externs.h  hashmap.c  hashmap.h  hashtables_bfields.c  hashtables_bfields.h  io.c  io.h  prng.c  prng.h  sort.c  sort.h  stats.c  stats.h  test.c  tree.c  tree.h  tree_utils.c  tree_utils.h  version.c  version.h
distancematrixtree/: CMakeLists.txt  auctionmatrix.h  bionj.cpp  bionj2.cpp  clustertree.h  decenttree.cpp  distancematrix.h  fancyrapidnj.h  flatmatrix.cpp  flatmatrix.h  hashrow.h  merging_notes.txt  nj.h  rapidnj.h  sequence.cpp  sequence.h  starttree.cpp  starttree.h  stitchup.cpp  upgma.h
lp/: CMakeLists.txt  README.txt  colamd.c  configure  lp_LUSOL.c  lp_MPS.c  lp_lib.c  lp_lib.h  lp_price.c  lp_scale.c  lp_simplex.c  lusol.c
main/: CMakeLists.txt  alisim.cpp  alisim.h  libiqtree2_fun.cpp  libiqtree2_fun.h  main.cpp  phyloanalysis.cpp  phyloanalysis.h  phylotesting.cpp  phylotesting.h  suppFunc.cpp  suppFunc.h  terraceanalysis.cpp  terraceanalysis.h  timetree.cpp  timetree.h  treetesting.cpp  treetesting.h  unify-static-libs.sh
model/: CMakeLists.txt  modelbin.cpp  modelbin.h  modelcodon.cpp  modelcodon.h  modelcodonempirical.cpp  modelcodonempirical.h  modelcodonparametric.cpp  modelcodonparametric.h  modelcodonsemiempirical.cpp  modelcodonsemiempirical.h  modeldivergent.cpp  modeldivergent.h  modeldna.cpp  modeldna.h  modeldnaerror.cpp  modeldnaerror.h  modelexpression.cpp  modelexpression.h  modelfactory.cpp  modelfactory.h  modelfactorymixlen.cpp  modelfactorymixlen.h  modelfileloader.cpp  modelfileloader.h  modelgtr.cpp  modelgtr.h  modelhmm.cpp  modelhmm.h  modelhmmgm.cpp  modelhmmgm.h  modelhmmtm.cpp  modelhmmtm.h  modelinfo.cpp  modelinfo.h  modelinfofromname.cpp  modelinfofromyamlfile.cpp  modelinfofromyamlfile.h  modelliemarkov.cpp  modelliemarkov.h  (+56 more)
ncl/: CMakeLists.txt  ncl.h  nxsassumptionsblock.cpp  nxsassumptionsblock.h  nxsblock.cpp  nxsblock.h  nxscharactersblock.cpp  nxscharactersblock.h  nxsdatablock.cpp  nxsdatablock.h  nxsdefs.h  nxsdiscretedatum.cpp  nxsdiscretedatum.h  nxsdiscretematrix.cpp  nxsdiscretematrix.h  nxsdistancedatum.cpp  nxsdistancedatum.h  nxsdistancesblock.cpp  nxsdistancesblock.h  nxsemptyblock.cpp  nxsemptyblock.h  nxsexception.cpp  nxsexception.h  nxsindent.h  nxsreader.cpp  nxsreader.h  nxssetreader.cpp  nxssetreader.h  nxsstring.cpp  nxsstring.h  nxstaxablock.cpp  nxstaxablock.h  nxstoken.cpp  nxstoken.h  nxstreesblock.cpp  nxstreesblock.h
pda/: CMakeLists.txt  circularnetwork.cpp  circularnetwork.h  ecopd.cpp  ecopd.h  ecopdmtreeset.cpp  ecopdmtreeset.h  graph.cpp  graph.h  greedy.cpp  greedy.h  gurobiwrapper.cpp  gurobiwrapper.h  hashsplitset.cpp  hashsplitset.h  lpwrapper.c  lpwrapper.h  pdnetwork.cpp  pdnetwork.h  pdtree.cpp  pdtree.h  pdtreeset.cpp  pdtreeset.h  pruning.h  split.cpp  split.h  splitgraph.cpp  splitgraph.h  splitset.cpp
phylolib/: CMakeLists.txt  Doxyfile  Makefile.AVX.gcc  Makefile.BAYES.SSE3.gcc  Makefile.JOERG.PTHREADS.gcc  Makefile.MPI  Makefile.PTHREADS.AVX.gcc  Makefile.SSE3.MPI  Makefile.SSE3.PTHREADS.gcc  Makefile.SSE3.gcc  Rakefile  avxLikelihood.c  axml.c  axml.h  bayes.c  bipartitionList.c  c_files.txt  cycle.h  evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  fastDNAparsimony.c  genericParallelization.c  globalVariables.h  makenewzGenericSpecial.c  models.c  newviewGenericSpecial.c  nnisearch.c  nnisearch.h  optimizeModel.c  phylolib.h  recom.c  recomIntr.sh  restartHashTable.c  searchAlgo.c  sim_reorder.cpp  topologies.c  trash.c  treeIO.c  treeIO.h  utils.c  (+1 more)
placement/: CMakeLists.txt  blockallocator.cpp  blockallocator.h  parallelparsimonycalculator.cpp  parallelparsimonycalculator.h  placement.cpp  placement.h  placementcostcalculator.cpp  placementcostcalculator.h  placementoptimizer.cpp  placementoptimizer.h  placementrun.cpp  placementrun.h  placementtraversalinfo.cpp  placementtraversalinfo.h  possibleplacement.cpp  possibleplacement.h  searchheuristic.cpp  searchheuristic.h  targetbranch.cpp  targetbranch.h  taxontoplace.cpp  taxontoplace.h
pll/: CMakeLists.old.txt  CMakeLists.txt  Makefile.ARM  Makefile.SSE3  Makefile.SSE3~  alignment.c  avxLikelihood.c  bipartitionList.c  cycle.h  errcodes.h  evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  fastDNAparsimony.c  genericParallelization.c  genericParallelization.h  globalVariables.h  hardware.c  hardware.h  hash.c  hash.h  lexer.c  lexer.h  makenewzGenericSpecial.c  mem_alloc.c  mem_alloc.h  mic_native.h  mic_native_aa.c  mic_native_dna.c  models.c  newick.c  newick.h  newviewGenericSpecial.c  optimizeModel.c  parsePartition.c  parsePartition.h  parsimony.c  pll.h  (+17 more)
(+1608 files in other folders)
